log
Wed 23 Aug 2023 10:06:29 PM UTC: 
 tests:  0|6
total_score: 0/70
797de46
Thu 24 Aug 2023 08:57:15 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4034bef
Thu 24 Aug 2023 08:59:41 PM UTC: 
 list.c | 64 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++--------
 1 file changed, 56 insertions(+), 8 deletions(-)
In file included from test.c:5:
list.c:59:8: error: redefinition of ‘lastList’
   59 | void * lastList(List * list) {
      |        ^~~~~~~~
list.c:55:8: note: previous definition of ‘lastList’ with type ‘void *(List *)’ {aka ‘void *(struct List *)’}
   55 | void * lastList(List * list) {
      |        ^~~~~~~~
Compilation failed
ad84ddd
